# HarmonyLinkCPP

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
HarmonyLinkLib/: CMakeLists.txt
HarmonyLinkLib/include/: Battery.h  Core.h  EDevice.h  FBattery.h  FDistroInfo.h  FOSInfo.h  FOSVerInfo.h  FString.h  HarmonyLink.h  Platforms.h  Version.h  Version.h.in
HarmonyLinkLib/include/Enums/: EDevice.h  EPlatform.h
HarmonyLinkLib/include/Platform/: IPlatformUtilities.h  PlatformUtilitiesHelper.h
HarmonyLinkLib/include/Structs/: FBattery.h  FCPUInfo.h  FDevice.h  FOSVerInfo.h
HarmonyLinkLib/src/: Core.h  HarmonyLink.cpp  HarmonyLink.h  dllmain.cpp
HarmonyLinkLib/src/Platform/: IPlatformUtilities.cpp  IPlatformUtilities.h  PlatformUtilitiesHelper.cpp  PlatformUtilitiesHelper.h  WineUtilities.cpp  WineUtilities.h
HarmonyLinkLib/src/Platform/Unix/: UnixUtilities.cpp  UnixUtilities.h
HarmonyLinkLib/src/Platform/Unix/Linux/: LinuxUtilities.cpp  LinuxUtilities.h
HarmonyLinkLib/src/Platform/Unix/Mac/: MacUtilities.cpp  MacUtilities.h
HarmonyLinkLib/src/Platform/Windows/: WindowsUtilities.cpp  WindowsUtilities.h
HarmonyLinkTest/src/: main.cpp
tests/: HarmonyLinkTest.cpp  HarmonyLinkTest.h  MockUtilities.cpp  MockUtilities.h  Tests.cpp  VersionTest.cpp
